task1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: go-app
  name: go-app
  namespace: exam-o-toshev
spec:
  containers:
  - image: otoshev/task2-goapp:v1
    name: go-app
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
