task12-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-app
  name: go-app
  namespace: exam-o-toshev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-app
    spec:
      containers:
      - image: otoshev/task2-goapp:v1
        name: task2-goapp
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          failureThreshold: 30
          periodSeconds: 10    
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi    
status: {}
