task3.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2025-03-14T14:15:59Z"
    labels:
      author: o-toshev
      project: practice
      run: nginx1
    name: nginx1
    namespace: exam-o-toshev
    resourceVersion: "8406417"
    uid: c198c2d8-3f56-44e3-8464-286e4e8c771b
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: nginx1
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-8gs5x
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: node2
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-8gs5x
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:01Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:15:59Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:01Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:01Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:15:59Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://41183e5618d9611bd379ca7dcdaa569e4a0c3744f7910f8503ee1c621fa80fb3
      image: docker.io/library/nginx:latest
      imageID: docker.io/library/nginx@sha256:9d6b58feebd2dbd3c56ab5853333d627cc6e281011cfd6050fa4bcf2072c9496
      lastState: {}
      name: nginx1
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-03-14T14:16:00Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-8gs5x
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 65.108.62.223
    hostIPs:
    - ip: 65.108.62.223
    phase: Running
    podIP: 10.233.66.159
    podIPs:
    - ip: 10.233.66.159
    qosClass: BestEffort
    startTime: "2025-03-14T14:15:59Z"
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2025-03-14T14:16:03Z"
    labels:
      author: o-toshev
      project: practice
      run: nginx2
    name: nginx2
    namespace: exam-o-toshev
    resourceVersion: "8406444"
    uid: bb760e90-96be-46b6-934b-70ceff842303
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: nginx2
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-w4lwq
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: node5
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-w4lwq
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:05Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:03Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:05Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:05Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-03-14T14:16:03Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://180fc728f472b1fd719919a8c633fa25b42391fd958a08003e09cc5b5059f58f
      image: docker.io/library/nginx:latest
      imageID: docker.io/library/nginx@sha256:9d6b58feebd2dbd3c56ab5853333d627cc6e281011cfd6050fa4bcf2072c9496
      lastState: {}
      name: nginx2
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-03-14T14:16:04Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-w4lwq
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 157.180.26.81
    hostIPs:
    - ip: 157.180.26.81
    phase: Running
    podIP: 10.233.69.140
    podIPs:
    - ip: 10.233.69.140
    qosClass: BestEffort
    startTime: "2025-03-14T14:16:03Z"
kind: List
metadata:
  resourceVersion: ""
