task4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flask-app
  name: flask-app
  namespace: exam-o-toshev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-app
    spec:
      containers:
      - image: nvrbckdown/flask-app:p-v4
        name: flask-app
        resources: {}
status: {}
