task13.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: go-app
  name: go-app
  namespace: exam-o-toshev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: go-app
status:
  loadBalancer: {}
