task9.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend-app
  name: frontend-app
  namespace: exam-o-toshev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-app
  type: NodePort
status:
  loadBalancer: {}
